name:                source
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library

  hs-source-dirs:      lib
  exposed-modules:     Source.Identifier
                       Source.Value
                       Source.Model
                       Source.Edit
                       Source.Protocol
                       Source.Protocol.Handle
                       Source.Layout
                       Source.User
                       Source.Util

  build-depends:       base, text, bytestring, cereal, containers, multiset,
                       enummapset-th, mtl, lens

  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveGeneric
                       DeriveFunctor
                       DeriveFoldable
                       DeriveTraversable
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       MultiParamTypeClasses
                       MultiWayIf
                       OverloadedStrings
                       PatternSynonyms
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TemplateHaskell
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       UndecidableInstances
                       ViewPatterns

  ghc-options:         -Wall -O2
  ghc-prof-options:    -fprof-auto
                       -auto-all
                       -caf-all


executable source-server

  hs-source-dirs:      exe
  main-is:             Server.hs

  other-modules:       Source.Server
                       Source.Server.State
                       Source.Server.State.Client

  build-depends:       base, source, mtl, lens, enummapset-th, network,
                       pretty-show

  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveGeneric
                       DeriveFunctor
                       DeriveFoldable
                       DeriveTraversable
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       MultiParamTypeClasses
                       MultiWayIf
                       OverloadedStrings
                       PatternSynonyms
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TemplateHaskell
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       UndecidableInstances
                       ViewPatterns

  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  ghc-prof-options:    -fprof-auto
                       -auto-all
                       -caf-all

executable source-client

  hs-source-dirs:      exe
  main-is:             Client.hs

  other-modules:       Source.Client
                       Source.Client.Render
                       Source.Client.Render.Layout
                       Source.Client.State

  build-depends:       base, source, enummapset-th, lens, vty, network

  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveGeneric
                       DeriveFunctor
                       DeriveFoldable
                       DeriveTraversable
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       MultiParamTypeClasses
                       MultiWayIf
                       OverloadedStrings
                       PatternSynonyms
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TemplateHaskell
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       UndecidableInstances
                       ViewPatterns

  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  ghc-prof-options:    -fprof-auto
                       -auto-all
                       -caf-all
