name:                source
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library

  hs-source-dirs:      lib
  exposed-modules:     Source.Identifier
                       Source.Value
                       Source.Model
                       Source.Edit
                       Source.Subspace
                       Source.Protocol
                       Source.Protocol.Handle
                       Source.Language.Core.Syn
                       Source.Language.Core.Lexer
                       Source.Language.Core.Parser
                       Source.Language.Core.Eval
                       Source.User
                       Source.Util

  build-depends:       base, text, bytestring, cereal, containers,
                       enummapset-th, mtl, lens, Earley, megaparsec,
                       QuickCheck, generic-arbitrary, constraints

  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveGeneric
                       DeriveFunctor
                       DeriveFoldable
                       DeriveTraversable
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       MultiParamTypeClasses
                       MultiWayIf
                       NegativeLiterals
                       OverloadedStrings
                       PatternSynonyms
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       RecursiveDo
                       ScopedTypeVariables
                       StandaloneDeriving
                       TemplateHaskell
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       UndecidableInstances
                       ViewPatterns

  ghc-options:         -Wall -O2
                       -fno-warn-incomplete-patterns
  ghc-prof-options:    -fprof-auto
                       -auto-all
                       -caf-all


executable source-server

  hs-source-dirs:      exe
  main-is:             Server.hs

  other-modules:       Source.Server
                       Source.Server.State
                       Source.Server.State.Client

  build-depends:       base, source, mtl, lens, containers, enummapset-th,
                       network, pretty-show

  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveGeneric
                       DeriveFunctor
                       DeriveFoldable
                       DeriveTraversable
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       MultiParamTypeClasses
                       MultiWayIf
                       NegativeLiterals
                       OverloadedStrings
                       PatternSynonyms
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       RecursiveDo
                       ScopedTypeVariables
                       StandaloneDeriving
                       TemplateHaskell
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       UndecidableInstances
                       ViewPatterns

  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
                       -fno-warn-incomplete-patterns
  ghc-prof-options:    -fprof-auto
                       -auto-all
                       -caf-all

executable source-client

  hs-source-dirs:      exe
  main-is:             Client.hs

  other-modules:       Source.Client
                       Source.Client.Render
                       Source.Client.State

  build-depends:       base, source, containers, enummapset-th, mtl, lens, vty == 5.18,
                       network, slay-core, slay-combinators, slay-number-int, slay-vty

  mixins:              slay-number-int (Slay.Number.Int as Slay.Number)

  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveGeneric
                       DeriveFunctor
                       DeriveFoldable
                       DeriveTraversable
                       FlexibleContexts
                       FlexibleInstances
                       GADTs
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       MultiParamTypeClasses
                       MultiWayIf
                       NegativeLiterals
                       OverloadedStrings
                       PatternSynonyms
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       RecursiveDo
                       ScopedTypeVariables
                       StandaloneDeriving
                       TemplateHaskell
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       UndecidableInstances
                       ViewPatterns

  ghc-options:         -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
                       -fno-warn-incomplete-patterns
  ghc-prof-options:    -fprof-auto
                       -auto-all
                       -caf-all

test-suite source-tests

  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Test/Suite.hs

  other-modules:       Test.Source.Identifier
                       Test.Source.Language
                       Test.Util

  build-depends:       base, source, lens, text,
                       tasty, tasty-quickcheck, tasty-hunit

  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       ConstraintKinds
                       DataKinds
                       DeriveGeneric
                       DeriveFunctor
                       DeriveFoldable
                       DeriveTraversable
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GADTs
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       MultiWayIf
                       NegativeLiterals
                       OverloadedStrings
                       PatternSynonyms
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       RecursiveDo
                       ScopedTypeVariables
                       StandaloneDeriving
                       TemplateHaskell
                       TupleSections
                       TypeApplications
                       TypeFamilies
                       TypeOperators
                       UndecidableInstances
                       ViewPatterns

  ghc-options:         -Wall -fno-warn-missing-signatures
